Parser/test_cases/bad/ifmissingpred.cl
class Hello {

   foo:Int <- 89;
   bar:Int;
   
   foo(a:Int, b:Int, c:String): Int  {
      if then  5 else 5 fi
   };
   
   bar() :Int {
      6
   };
   
   
};
